# ofuton-rs

./: .gitignore  Cargo.toml  README.md  README_ja.md  memo.md  rustfmt.toml
.github/workflows/: release.yml  test.yml
entity/: Cargo.toml
entity/src/: object.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250702_134901_create_objects_table.rs  m20250705_083629_add_internal_filename_column_to_object_table.rs  m20250712_185118_add_encoded_filename_column_to_object_table.rs  m20250811_061518_drop_filename_column.rs  m20250811_064437_add_nullable_filename_column.rs
src/: cli.rs  config.rs  database.rs  main.rs  resource.rs  server.rs  storage.rs
src/cli/: command.rs  utils.rs
src/cli/command/: import.rs  migrate.rs
src/entity/: mod.rs  object.rs  prelude.rs
src/resource/: default.config.toml
src/server/: api.rs  middleware.rs  utils.rs
src/server/api/: static.rs
src/server/api/object/: read.rs  write.rs
src/server/middleware/: logger.rs  multipart.rs  signature.rs
src/storage/: file.rs  metadata.rs
