[package]
name = "ofuton-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration"]

[dependencies]
migration = { path = "migration" }
serde = {version = "1.0", features = ["derive"] }
once_cell = "1.21"
config = "0.15"

[dependencies.tokio]
version = "1.46"
features = ["full"]

[dependencies.sea-orm]
version = "1.1"
features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"]
