[package]
name = "ofuton-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
serde = {version = "1.0", features = ["derive"] }
once_cell = "1.21"
config = "0.15"
axum = "0.8"
axum-range = { git = "https://github.com/Rinbili/axum-range.git", rev = "4965da6edbe90de67b236bad2cc826ee8d93df7a" }
anyhow = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sentry = "0.41"

[dependencies.tokio]
version = "1.46"
features = ["full"]

[dependencies.sea-orm]
version = "1.1"
features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"]
