[package]
name = "ofuton-rs"
version = "2025.8.1"
edition = "2024"

[workspace]
members = [".", "migration", "entity"]

[workspace.dependencies]
sea-orm = { version = "1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
sea-orm = { workspace = true }
openssl-sys = { version = "0.9", features = ["vendored"] }
tokio = { version = "1.47", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
once_cell = "1.21"
config = "0.15"
axum = "0.8"
axum-extra = "0.10"
axum-range = { git = "https://github.com/Rinbili/axum-range.git", rev = "4965da6edbe90de67b236bad2cc826ee8d93df7a" }
anyhow = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sentry = "0.42"
blake3 = "1.8"
sha2 = "0.10"
hmac = "0.12"
urlencoding = "2.1"
tokio-stream = "0.1"
chrono = "0.4"
regex = "1.11"
clap = "4.5"
indicatif = "0.18"
mime_guess = "2.0"
async-recursion = "1.1"
dialoguer = "0.11"
csv = "1.3"
url = "2.5"
