[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[lints.rust]
unused_imports = "allow"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
]
